force-app/main/default/objects/Commitment_History__c/Commitment_History__c.object-meta.xml
<CustomObject>
    <label>Commitment</label>
    <nameField>
        <displayFormat>COMMIT-{000000}</displayFormat>
        <label>Commit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>