force-app/main/default/objects/Commitment_History__c/fields/Amount_Sign__c.field-meta.xml
<CustomField>
    <fullName>Amount_Sign__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>