force-app/main/default/objects/Commitment_History__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipName>Commitment_History</relationshipName>
    <type>Lookup</type>
</CustomField>