force-app/main/default/objects/Commitment_History__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Commit Date</label>
    <type>Date</type>
</CustomField>