force-app/main/default/objects/Commitment_History__c/fields/Is_Decommitment__c.field-meta.xml
<CustomField>
    <fullName>Is_Decommitment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Decommitment</label>
    <type>Checkbox</type>
</CustomField>