force-app/main/default/objects/Commitment_History__c/validationRules/amount_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>amount_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount must be greater than 0</errorMessage>
</ValidationRule>